// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot with dark theme 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa ffQnKI"
    name="button"
    type="button"
  >
    Dark
  </button>
</DocumentFragment>
`;

exports[`Button should match snapshot with light theme 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa bcPRtl"
    name="button"
    type="button"
  >
    Light
  </button>
</DocumentFragment>
`;
